Mise à jour artwork-5 et corrections CSS

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
 /* Cacher .nav-modern sur mobile */
 @media (max-width: 768px) {
     .nav-modern {
-       background: rgba(255, 255, 255, 0.829);
+       background: rgba(255, 255, 255, 0.799);
     }
 }
 
@@ -315,11 +315,10 @@ body {
     color: var(--color-primary);
     border: 2px solid var(--color-primary);
     border-radius: 36px;
-    background: transparent;
     overflow: hidden;
     cursor: pointer;
     transition: all 0.4s cubic-bezier(0.25, 1, 0.5, 1);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+    box-shadow: 0 5px 15px rgb(0, 0, 0);
     text-decoration: none;
 }
 
