--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
 /* Cacher .nav-modern sur mobile */
 @media (max-width: 768px) {
     .nav-modern {
-       background: rgba(255, 255, 255, 0.799);
+       background: rgba(255, 94, 94, 0.799);
     }
 }
 
@@ -394,6 +394,19 @@ body {
 
 }
 
+
+/* iPhone 15 portrait */
+@media (min-width: 390px) and (max-width: 390px) {
+    .nav-btn {
+        padding: 4px 7.5px !important;      /* réduit le padding */
+        font-size: 0.52rem !important;    /* texte plus petit */
+        border-radius: 28px !important;   /* arrondi adapté */
+    }
+
+    .nav-btn::before {
+        border-radius: 28px !important;
+    }
+}
 
 /* iPhone 12 portrait */
 @media (min-width: 390px) and (max-width: 390px) {
