Mise à jour artwork-5 et corrections CSS

--- a/Mentions-legales.html
+++ b/Mentions-legales.html
@@ -269,7 +269,7 @@
             <p><strong>Nom commercial :</strong> Naoma Studio</p>
             <p><strong>Statut juridique :</strong> Micro-entrepreneur</p>
             <p><strong>Email :</strong> naoma.studio@gmail.com</p>
-            <p><strong>SIRET :</strong> 92857097700019 </p>
+            <p><strong>SIRET :</strong> 928 570 977 00019 </p>
         </div>
     </section>
 
