Mise à jour artwork-5 et corrections CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- SEO Meta Tags -->
-    <title>Toini - Artiste Peintre Plasticien | Antoine Phelipot </title>
+    <title>toini-art</title>
     <meta name="description" content="Découvrez l'univers de Toini (Antoine Phelipot), artiste peintre plasticien. Exploration de l'identité, la fragmentation et la mémoire à travers la peinture et le collage.">
     <meta name="keywords" content="Toini, Antoine Phelipot, artiste peintre, plasticien, peinture, collage, fragmentation, identité, métissage, galerie art, exposition art, Bretagne, Chantepie">
     <meta name="author" content="Antoine Phelipot (Toini)">
@@ -54,7 +54,7 @@
     <link rel="preconnect" href="https://www.instagram.fr">
 
 
-    <title>Toinipepe - Artiste Peintre</title>
+    <title>toini-art</title>
     <style>
         :root {
     /* Couleurs principales */
@@ -3025,6 +3025,7 @@ body {
 </style>
 </head>
 <body>
+
 <header class="header">
     <div class="nav-modern">
         <div class="logo">
