--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <link rel="icon" type="image/svg+xml" href="toini toile 2025-09-22 183908.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="toini toile 2025-09-22 183908.svg">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+
+
     <!-- Preconnect pour optimiser les performances -->
     <link rel="preconnect" href="https://fonts.googleapis.fr">
     <link rel="preconnect" href="https://www.instagram.fr">
