Mise à jour Instagram + contact

--- a/index.html
+++ b/index.html
@@ -3303,7 +3303,7 @@ body {
 </div>
 
 
-        <a href="https://voltaic-stool-9ef.notion.site/Toini-2ca05fc1b24580738993c3bac7f9c16b?source=copy_link" class="expo-btn">Voir les lieux d’expositions</a>
+        <a href="https://voltaic-stool-9ef.notion.site/Les-expos-Toini-2e605fc1b2458021af4eedb30b2c3f21" class="expo-btn">Voir les lieux d’expositions</a>
 
     </div>
 </section>
