--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="toini toile 2025-09-22 183908.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="toini toile 2025-09-22 183908.svg">
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
@@ -3189,6 +3190,7 @@ body {
         </div>
 
 
+    
         <!-- Œuvre 8 -->
         <div class="artwork fade-in">
             <div class="artwork-image">
